--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         align-items: center;
       }
       #div {
-        margin-left: 50px;
+        margin-left: 50%;
         margin-top: 20px;
         width : 70%;
         font-size: 50px;
@@ -73,7 +73,6 @@
 
       @media screen and (max-width: 700px) and (min-width: 100px){
         .box{
-            margin-left:-10px;
         }
         .box:nth-child(2) {
           /*width: 500px;
