--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 
       @media screen and (max-width: 700px) and (min-width: 100px){
         .box{
+          max-width : 50%;
+          margin: auto;
         }
         .box:nth-child(2) {
           /*width: 500px;
