--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       @media screen and (max-width: 700px) and (min-width: 100px){
         .box{
-          margin: auto;
+          margin: 0px;
         }
         .box:nth-child(2) {
           /*width: 500px;
