--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
       @media screen and (max-width: 700px) and (min-width: 100px){
         .box{
-             text-align : center;
+          margin-left : 0px;
+          width : 30%;
         }
         .box:nth-child(2) {
           /*width: 500px;
