--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 
       @media screen and (max-width: 700px) and (min-width: 100px){
         .box{
-          margin-left : 0px;
-          width : 30%;
+          max-width: 100%;
         }
         .box:nth-child(2) {
           /*width: 500px;
