--- a/index.html
+++ b/index.html
@@ -73,11 +73,7 @@
 
       @media screen and (max-width: 700px) and (min-width: 100px){
         .box{
-          max-width: 100%;
-        }
-        .box:nth-child(2) {
-          /*width: 500px;
-          height : 500px;*/
+          flex-direction: column;
         }
         #video1{
           max-width: 100%;
