--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         align-items: center;
       }
       #div {
-        margin-left: 50%;
+        margin-left: 10px;
         margin-top: 20px;
         width : 70%;
         font-size: 50px;
