--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         align-items: center;
       }
       #div {
-        margin-left: 10px;
+        margin-left: 50%;
         margin-top: 20px;
-        width : 70%;
+        width : 55%;
         font-size: 50px;
         color: #ffec00;
         text-shadow: -3px 0 blue, 0 3px blue, 0 -3px blue;
