--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       #div {
         margin-left: 50%;
         margin-top: 20px;
-        width : 55%;
+        width : 70%;
         font-size: 50px;
         color: #ffec00;
         text-shadow: -3px 0 blue, 0 3px blue, 0 -3px blue;
@@ -70,7 +70,18 @@
         height : 35px;
       
       }
-
+      
+      @media screen and (max-width: 700px) and (min-width: 100px){
+        #div{
+           max-width : 40%;
+        }
+        #video1{
+          max-width: 100%;
+        }
+        #pause{
+          margin-left: 0px;
+        }
+      }
 
     </style>
 
