--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
       
       @media screen and (max-width: 700px) and (min-width: 100px){
         #div{
-           max-width : 40%;
+            margin-left: 10px;
+            margin-top: 20px;
+            width : 40%;
+            font-size: 30px;
         }
         #video1{
           max-width: 100%;
