--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
       }
       
       @media screen and (max-width: 700px) and (min-width: 100px){
+        .box{
+          flex-direction: column;
+        }
         #div{
             margin-left: -100px;
             margin-top: 20px;
