--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
 
       @media screen and (max-width: 550px) and (min-width: 100px){
         #div{
-            margin-left: -10px;
+            margin-left: -30px;
             margin-top: 20px;
             width : 40%;
             font-size: 30px;
+            text-align: justify;
         }
         #video1{
           max-width: 100%;
